--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+### Android ###
 # Built application files
 *.apk
 *.ap_
@@ -64,15 +64,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
-=======
-*.iml
-.gradle
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
->>>>>>> First commit
+
+### Android Patch ###
+gen-external-apklibs
